# hit-my-bet-rs-program

./: Cargo.toml  readme.md
examples/: claim_market.rs  create_market.rs  inspect_market.rs  make_prediction.rs  resolve_market.rs
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
src/state/: mod.rs  prediction_market.rs  user_prediction.rs
tests/: init_prediction_market.rs  make_prediction.rs
tests/helpers/: mod.rs  random_market.rs
